Translated ui to english and restructured project to be self-contained

--- a/src/Circuito.html
+++ b/src/Circuito.html
@@ -13,14 +13,14 @@
  <script type="importmap">
   {
     "imports": {
-     "three" : "/Assets/scripts/three.js/build/three.module.js",
-     "gui"   : "/Assets/scripts/three.js/examples/jsm/libs/lil-gui.module.min.js",
-     "glTF-loaders"      : "/Assets/scripts/three.js/examples/jsm/loaders/GLTFLoader.js",
-     "flyControls"  : "/Assets/scripts/three.js/examples/jsm/controls/FlyControls.js",
-     "Line2" : "/Assets/scripts/three.js/examples/jsm/lines/Line2.js",
-     "LineMaterial" : "/Assets/scripts/three.js/examples/jsm/lines/LineMaterial.js"
+      "three": "https://esm.sh/three@0.169.0",
+      "gui": "https://esm.sh/three@0.169.0/examples/jsm/libs/lil-gui.module.min.js",
+      "glTF-loaders": "https://esm.sh/three@0.169.0/examples/jsm/loaders/GLTFLoader.js",
+      "flyControls": "https://esm.sh/three@0.169.0/examples/jsm/controls/FlyControls.js",
+      "Line2": "https://esm.sh/three@0.169.0/examples/jsm/lines/Line2.js",
+      "LineMaterial": "https://esm.sh/three@0.169.0/examples/jsm/lines/LineMaterial.js"
     }
-   }
+  }
  </script>
  <script type="module" src="Circuito.js"></script>
 
