--- a/src/FreeCam.html
+++ b/src/FreeCam.html
@@ -12,12 +12,12 @@
 
  <script type="importmap">
   {
-   "imports": {
-    "three" : "/Assets/scripts/three.js/build/three.module.js",
-    "gui"   : "/Assets/scripts/three.js/examples/jsm/libs/lil-gui.module.min.js",
-    "glTF-loaders"      : "/Assets/scripts/three.js/examples/jsm/loaders/GLTFLoader.js",
-    "flyControls"  : "/Assets/scripts/three.js/examples/jsm/controls/FlyControls.js"
-   }
+    "imports": {
+        "three": "https://esm.sh/three@0.169.0",
+        "gui": "https://esm.sh/three@0.169.0/examples/jsm/libs/lil-gui.module.min.js",
+        "glTF-loaders": "https://esm.sh/three@0.169.0/examples/jsm/loaders/GLTFLoader.js",
+        "flyControls": "https://esm.sh/three@0.169.0/examples/jsm/controls/FlyControls.js"
+    }
   }
  </script>
  <script type="module" src="FreeCam.js"></script>
