--- a/src/Circuito.html
+++ b/src/Circuito.html
@@ -28,7 +28,10 @@
 
   <div id="threejs-canvas">
   </div>
-  <h2 id="carregando">Carregando...</h2>
+  <div id="carregando">
+    <div class="spinner"></div>
+    <div class="loading-text">Loading...</div>
+  </div>
   <div id="vetores-camera">
   </div>
  </body>
